fix alignment of portfolio items

--- a/css/layout/common.css
+++ b/css/layout/common.css
@@ -414,11 +414,8 @@ a {
   width: 100%;
   padding-left: 10px;
   line-height: 1.2;
-  text-align: left;
+  text-align: center;
   font-weight: 600;
-}
-.works-item .works-desc span {
-  color: var(--secondary-accent-color);
 }
 .works-item .works-desc a {
   display: block;
@@ -625,11 +622,10 @@ a {
   }
   .wrapper > .slide > .works-wrapper {
     max-width: 650px;
-    justify-content: space-around;
   }
   .works-item {
     width: 30%;
-    margin: 20px 20px;
+    margin: 20px 0;
   }  
 
   .main-banner .short-profile {
@@ -738,6 +734,13 @@ a {
   
   .image-banner img {
     height: 160px;
+  }
+
+  .wrapper > .slide > .works-wrapper {
+    max-width: 1024px;
+  }
+  .works-item img {
+    max-width: 250px;
   }
 
   .modal-dialog-scrollable .modal-content {
